--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ perl:
   - "5.18"
 before_install:
   - cpanm install --notest Alien::Tidyp
-  - sudo aptitude install inetutils-traceroute
+  - sudo apt-get -y install inetutils-traceroute
 
